 - Win, Fuck him
* Completely refactored out use of old Text.AddOutput and Text.Newline. It's possible that this might have some adverse effects. Holler if there are suddenly blank screens or missing text somewhere.
* Made a full rewrite to image preloading code that should hopefully help with the loader freezing on 86/88 or similar. Holler if the issue still persists

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3w2
-------------
* Fixed broken Vena restoration (doesn't loop anymore).
* Removed ability for Lagon to impregnate your butt.
* Fixed a bug that gave Terry perpeptual pregnancy.
* Fixed a bug that would break talking to Lagon when you had sided with him.

Version 0.3w
------------
* Vena restoration added. You need to find the scepter and bring it to Ophelia. If you've already defeated Lagon, the scene should still trigger.
 - No followup currently
 - No judgement for Lagon currently
* Lagon scenes added, a total of 15k words written by me:
 - Talk scenes
 - Blowjob
 - Get fucked
 - Tweaked the "Usurp!" option so you can't trigger it by accident
* Added several Save locations:
 - Outlaws camp
 - Dryad's glade
 - Jeanne's tower
 - Ophelia's lab
* GUI change: defeated enemies have their portraits faded. Report if this causes graphics glitches on some browsers.

Version 0.3v2
-------------
* Fixed a bug in Terry save format

Version 0.3v
------------
* Fixed a bug in Terry vag scene.
* Tweaked Estros/Testos so that growth/shrinking is more of a sliding scale.
* Added scenes for Ophelia:
 - Talk (multiple topics), written by QB and LD and me.
 - Sex - vaginal fuck, written by QB and LD.
* Fixed a bug in the sermon spell.
* Restructured the save format a bit to account for stretch/capacity on some NPCs. This may have some side effects, such as Terry's body resetting the first time you load an old save.
* New Miranda scene:
 - Dommy Miranda, have her ride you.