@@ -11,6 +11,8 @@ Version 0.3x
  - Win, Fuck him
 * Completely refactored out use of old Text.AddOutput and Text.Newline. It's possible that this might have some adverse effects. Holler if there are suddenly blank screens or missing text somewhere.
 * Made a full rewrite to image preloading code that should hopefully help with the loader freezing on 86/88 or similar. Holler if the issue still persists
+* New Terry scene by QB and LD:
+ - Pet: Kiss
 
 --------------------------------------------
              PREVIOUS VERSIONS
